PIM-2557 Fix grid pagination display on small screens

--- a/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
@@ -44,6 +44,14 @@ table.grid {
   }
 }
 
+@media all and (max-width: 1600px) {
+  .grid-toolbar {
+    .pagination-centered, .page-size label {
+      width: auto;
+    }
+  }
+}
+
 .grid .action-cell {
   vertical-align: top;
   a.action {
